source/css/_fonts.styl
@font-face {
  font-style: normal
  font-family: "Meslo LG"
  src: local("Meslo LG S"), url("../lib/meslo-LG/MesloLGS-Regular.ttf") format("truetype")
  font-display: swap
}

/* noto-serif-sc-200 - chinese-simplified */
@font-face {
  font-family: 'Noto Serif SC';
  font-style: normal;
  font-weight: 200;
  font-display: swap;
  src: local(''),
       url('../fonts/noto-serif-sc-v22-chinese-simplified-200.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
       url('../fonts/noto-serif-sc-v22-chinese-simplified-200.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
}
/* noto-serif-sc-regular - chinese-simplified */
@font-face {
  font-family: 'Noto Serif SC';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: local(''),
       url('../fonts/noto-serif-sc-v22-chinese-simplified-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
       url('../fonts/noto-serif-sc-v22-chinese-simplified-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
}
/* noto-serif-sc-700 - chinese-simplified */
@font-face {
  font-family: 'Noto Serif SC';
  font-style: normal;
  font-weight: 700;
  font-display: swap;
  src: local(''),
       url('../fonts/noto-serif-sc-v22-chinese-simplified-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
       url('../fonts/noto-serif-sc-v22-chinese-simplified-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
}

/* roboto-serif-200 - latin */
@font-face {
  font-family: 'Roboto Serif';
  font-style: normal;
  font-weight: 200;
  src: local(''),
       url('../fonts/roboto-serif-v8-latin-200.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
       url('../fonts/roboto-serif-v8-latin-200.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
}
/* roboto-serif-regular - latin */
@font-face {
  font-family: 'Roboto Serif';
  font-style: normal;
  font-weight: 400;
  src: local(''),
       url('../fonts/roboto-serif-v8-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
       url('../fonts/roboto-serif-v8-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
}
/* roboto-serif-700 - latin */
@font-face {
  font-family: 'Roboto Serif';
  font-style: normal;
  font-weight: 700;
  src: local(''),
       url('../fonts/roboto-serif-v8-latin-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
       url('../fonts/roboto-serif-v8-latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
}
/* roboto-serif-200italic - latin */
@font-face {
  font-family: 'Roboto Serif';
  font-style: italic;
  font-weight: 200;
  src: local(''),
       url('../fonts/roboto-serif-v8-latin-200italic.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
       url('../fonts/roboto-serif-v8-latin-200italic.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
}
/* roboto-serif-italic - latin */
@font-face {
  font-family: 'Roboto Serif';
  font-style: italic;
  font-weight: 400;
  src: local(''),
       url('../fonts/roboto-serif-v8-latin-italic.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
       url('../fonts/roboto-serif-v8-latin-italic.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
}
/* roboto-serif-700italic - latin */
@font-face {
  font-family: 'Roboto Serif';
  font-style: italic;
  font-weight: 700;
  src: local(''),
       url('../fonts/roboto-serif-v8-latin-700italic.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
       url('../fonts/roboto-serif-v8-latin-700italic.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
}

